$lookup does not respect readConcern when aggregation on sharded collection

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 3.4.0-rc3
    • Affects Version/s: 3.2.8, 3.3.10
    • Component/s: Aggregation Framework
    • None
    • Fully Compatible
    • ALL
    • Query 2016-11-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When an aggregation is run against a sharded collection with a $lookup stage, the merging shard that will perform the $lookup does not get propagated information about which readConcern was requested.

            Assignee:
            James Wahlin
            Reporter:
            Charlie Swanson
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: