src/mongo/s/commands/cluster_aggregate.cpp
@@ -233,8 +233,7 @@ Status ClusterAggregate::runAggregate(OperationContext* txn,
     }
 
     mergeCmd.setField("writeConcern", Value(cmdObj["writeConcern"]));
-
-    // Not propagating readConcern to merger since it doesn't do local reads.
+    mergeCmd.setField("readConcern", Value(cmdObj["readConcern"]));
 
     // If the user didn't specify a collation already, make sure there's a collation attached to
     // the merge command, since the merging shard may not have the collection metadata.
